Scrollbar style fixed

--- a/client/src/component/pages/biography/style/_parameters.sass
+++ b/client/src/component/pages/biography/style/_parameters.sass
@@ -4,7 +4,7 @@ $content-navbar-height: 60px
 $content-text-color: #fff
 $content-background-color: #dbdbdb
 $content-highlight-color: #fff
-$content-bright-color: #000000
-$content-contrast-color: #383838
+$content-dark-color: #000000
+$content-bright-color: #383838
 $content-empty-percent-color: #cacaca
-$content-fade-text: grey
+$content-middle-contrast-color: grey
